examples/test/testpolicy2135.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2135
  namespace: namespace255
spec:
  podSelector:
    matchLabels:
      key39: value20
      key37: value32
      key26: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value26
          key46: value27
          key34: value17
      podSelector:
        matchLabels:
          key41: value44
          key45: value37
